2004-06-14  David Malcolm  <dmalcolm@redhat.com>

	* conglomerate.spec.in: Added pixmaps/conglomerate/*.png
	as suggested by Nickolay V. Shmyrev in http://lists.copyleft.no/pipermail/conglomerate-devel/2004-June/002764.html
	
2004-06-08  David Malcolm  <dmalcolm@redhat.com>

	* configure.in: Applied fix for bug 143937 by 
	nshmyrev@yandex.ru (Nickolay V. Shmyrev)

2004-06-04  David Malcolm  <dmalcolm@redhat.com>

	* configure.in: Added test for Sewfox

	* Makefile.am: Added CSS data

2004-05-05  Geert Stappers <stappers@stappers.nl>

	* configure.in
	
	gtk-doc is default disabled. (working on bugzilla #131600)

2004-04-10  Adam Weinberger  <adamw@gnome.org>

	* configure.in: Added en_CA to ALL_LINGUAS.

2004-04-09  Gareth Owen  <gowen72@yahoo.com>

	* configure.in: Added en_GB to ALL_LINGUAS

2004-03-20  Guntupalli Karunakar  <karunakar@freedomink.org>

        * configure.in: Added "pa" (Punjabi) to ALL_LINGUAS.

2004-02-24  Geert Stappers <stappers@stappers.nl>

	* NEWS
	
	Removed old news.

2004-02-22  Geert Stappers <stappers@stappers.nl>

	* conglomerate.spec.in
	
	Replaced by the version of Dag Wieers with automade version.
	Yes, the FOSDEM visit was a joy.

2004-02-20  Geert Stappers <stappers@stappers.nl>

	* configure.in
	
	Added switch for -Werror compile option. ( bugzilla #134747 )

2004-02-18  Geert Stappers <stappers@stappers.nl>

	* NEWS
	Updated with the announce of 0.7.12.

2004-02-17  David Malcolm <david@davemalcolm.demon.co.uk>

	* configure.in

	Post-release version bump to 0.7.13

	* configure.in

	Put version back to 0.7.12 ready for release

2004-02-11  Mitsuru Oka  <oka326@parkcity.ne.jp>

	* configure.in: Added "ja" to ALL_LINGUAS.

2004-02-09  Geert Stappers <stappers@stappers.nl>

	* Makefile.am

	dispspecs is a new directory
	version bump to 0.7.12pre1

	* configure.in

	generate dispspecs/Makefile

2004-02-08  Geert Stappers <stappers@stappers.nl>

	* NEWS
	Updated with the announce of 0.7.11.
	with extended User manual information
